--- a/PP.MAUI/Views/EmployeeView.xaml
+++ b/PP.MAUI/Views/EmployeeView.xaml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PP.MAUI.Views.ProjectView"
+             x:Class="PP.MAUI.Views.EmployeeView"
              NavigatedTo="OnArrived">
-
     <ScrollView>
         <Grid>
             <Grid.RowDefinitions>
@@ -30,9 +29,13 @@
 
 
             <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="10*"/>
+                    <ColumnDefinition Width="2*"/>
+                </Grid.ColumnDefinitions>
                 <ListView
-                    ItemsSource="{Binding Path=Projects, Mode=TwoWay}"
-                    SelectedItem="{Binding Path=SelectedProject, Mode=TwoWay}">
+                    ItemsSource="{Binding Path=Employees, Mode=TwoWay}"
+                    SelectedItem="{Binding Path=SelectedEmployee, Mode=TwoWay}" Grid.Column="0">
                 </ListView>
             </Grid>
 
