--- a/PP.MAUI/Views/TimeView.xaml
+++ b/PP.MAUI/Views/TimeView.xaml
@@ -1,43 +1,30 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PP.MAUI.Views.ProjectView"
+             x:Class="PP.MAUI.Views.TimeView"
              NavigatedTo="OnArrived">
-
     <ScrollView>
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="1*"/>
                 <RowDefinition Height="8*"/>
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
 
-            <Grid Grid.Row="0">
 
-                <Grid.RowDefinitions>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
+            <Grid Grid.Row="0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="10*"/>
                     <ColumnDefinition Width="2*"/>
                 </Grid.ColumnDefinitions>
-
-                <Entry Grid.Column="0" Text="{Binding Path=Query}"></Entry>
-                <Button Grid.Column="1" Text="Search" Clicked="SearchClicked"></Button>
-
-            </Grid>
-
-
-            <Grid Grid.Row="1">
                 <ListView
-                    ItemsSource="{Binding Path=Projects, Mode=TwoWay}"
-                    SelectedItem="{Binding Path=SelectedProject, Mode=TwoWay}">
+                    ItemsSource="{Binding Path=Times, Mode=TwoWay}"
+                    SelectedItem="{Binding Path=SelectedTime, Mode=TwoWay}" Grid.Column="0">
                 </ListView>
             </Grid>
 
 
-            <Grid Grid.Row="2">
+            <Grid Grid.Row="1">
 
                 <Grid.RowDefinitions>
                     <RowDefinition/>
@@ -53,7 +40,7 @@
                 <Button Grid.Column="2" Text="Delete" Clicked="DeleteClicked"></Button>
 
             </Grid>
-            <Button Grid.Row="3" Text="Go Back" Clicked="GoBackClicked"></Button>
+            <Button Grid.Row="2" Text="Go Back" Clicked="GoBackClicked"></Button>
         </Grid>
 
     </ScrollView>
