--- a/PP.MAUI/MainPage.xaml
+++ b/PP.MAUI/MainPage.xaml
@@ -10,6 +10,8 @@
             VerticalOptions="Center">
             <Button Text="Manage Clients" Clicked="ClientsClicked"></Button>
             <Button Text="Manage Projects" Clicked="ProjectsClicked"></Button>
+            <Button Text="Manage Employees" Clicked="EmployeesClicked"></Button>
+            <Button Text="Enter Time" Clicked="TimeClicked"></Button>
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
