--- a/PP.MAUI/Views/AddProject.xaml
+++ b/PP.MAUI/Views/AddProject.xaml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PP.MAUI.Views.EditClient"
-             NavigatedTo="OnArriving">
+             x:Class="PP.MAUI.Views.AddProject"
+             Title="Project Management">
     <ScrollView>
         <VerticalStackLayout
             Spacing="25"
             Padding="30,0"
             VerticalOptions="Center">
-            <Label Text="Edit the Client Below..."></Label>
+            <Label Text="Create a Project Below..."></Label>
             <Label Text="Id:"></Label>
             <Entry Text="{Binding Path=Model.Id}"></Entry>
             <Label Text="Open Date:"></Label>
@@ -17,18 +17,13 @@
             <Label Text="Close Date:"></Label>
             <DatePicker Date="{Binding Path=Model.CloseDate}"></DatePicker>
             <Label Text="Name:"></Label>
-            <Entry Text="{Binding Path=Model.Name}"></Entry>
+            <Entry Text="{Binding Path=Model.ShortName}"></Entry>
 
             <Label Text="Notes:"></Label>
-            <Entry Text="{Binding Path=Model.Notes}"></Entry>
+            <Entry Text="{Binding Path=Model.LongName}"></Entry>
 
-            <StackLayout Orientation="Horizontal" VerticalOptions="CenterAndExpand">
-                <Label Text="Is this Client Active?" VerticalOptions="Center" />
-                <Switch IsToggled="{Binding Path=Model.isActive}" />
-            </StackLayout>
-
-            <Label Text="Current Projects:"></Label>
-            <ListView ItemsSource="{Binding Path=Projects}"></ListView>
+            <Label Text="Client ID:"></Label>
+            <Entry Text="{Binding Path=Model.ClientID}"></Entry>
 
             <StackLayout Orientation="Horizontal" VerticalOptions="CenterAndExpand">
                 <Button Text="Submit" Clicked="SubmitClicked"></Button>
