--- a/PP.MAUI/Views/ClientView.xaml
+++ b/PP.MAUI/Views/ClientView.xaml
@@ -30,10 +30,13 @@
 
 
             <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="10*"/>
+                    <ColumnDefinition Width="2*"/>
+                </Grid.ColumnDefinitions>
                 <ListView
                     ItemsSource="{Binding Path=Clients, Mode=TwoWay}"
-                    SelectedItem="{Binding Path=SelectedClient, Mode=TwoWay}">
-
+                    SelectedItem="{Binding Path=SelectedClient, Mode=TwoWay}" Grid.Column="0">
                 </ListView>
             </Grid>
 
