--- a/PP.MAUI/Views/EmployeeDetail.xaml
+++ b/PP.MAUI/Views/EmployeeDetail.xaml
@@ -1,34 +1,22 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PP.MAUI.Views.EditClient"
+             x:Class="PP.MAUI.Views.EmployeeDetail"
              NavigatedTo="OnArriving">
     <ScrollView>
         <VerticalStackLayout
             Spacing="25"
             Padding="30,0"
             VerticalOptions="Center">
-            <Label Text="Edit the Client Below..."></Label>
+            <Label Text="Edit the Employee Below..."></Label>
             <Label Text="Id:"></Label>
             <Entry Text="{Binding Path=Model.Id}"></Entry>
-            <Label Text="Open Date:"></Label>
-            <DatePicker Date="{Binding Path=Model.OpenDate}"></DatePicker>
-
-            <Label Text="Close Date:"></Label>
-            <DatePicker Date="{Binding Path=Model.CloseDate}"></DatePicker>
+            
             <Label Text="Name:"></Label>
             <Entry Text="{Binding Path=Model.Name}"></Entry>
 
-            <Label Text="Notes:"></Label>
-            <Entry Text="{Binding Path=Model.Notes}"></Entry>
-
-            <StackLayout Orientation="Horizontal" VerticalOptions="CenterAndExpand">
-                <Label Text="Is this Client Active?" VerticalOptions="Center" />
-                <Switch IsToggled="{Binding Path=Model.isActive}" />
-            </StackLayout>
-
-            <Label Text="Current Projects:"></Label>
-            <ListView ItemsSource="{Binding Path=Projects}"></ListView>
+            <Label Text="Rate:"></Label>
+            <Entry Text="{Binding Path=Model.Rate}"></Entry>
 
             <StackLayout Orientation="Horizontal" VerticalOptions="CenterAndExpand">
                 <Button Text="Submit" Clicked="SubmitClicked"></Button>
