--- a/PP.MAUI/Views/AddClient.xaml
+++ b/PP.MAUI/Views/AddClient.xaml
@@ -2,7 +2,8 @@
 
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PP.MAUI.Views.AddClient">
+             x:Class="PP.MAUI.Views.AddClient"
+             NavigatedTo="OnArriving">
 
     <ScrollView>
         <VerticalStackLayout
@@ -10,8 +11,6 @@
             Padding="30,0"
             VerticalOptions="Center">
             <Label Text="Create a Client Below..."></Label>
-            <Label Text="Id:"></Label>
-            <Entry Text="{Binding Path=Model.Id}"></Entry>
             <Label Text="Open Date:"></Label>
             <DatePicker Date="{Binding Path=Model.OpenDate}"></DatePicker>
 
