--- a/PP.MAUI/MainPage.xaml
+++ b/PP.MAUI/MainPage.xaml
@@ -8,8 +8,7 @@
             Spacing="25"
             Padding="30,0"
             VerticalOptions="Center">
-            <Button Text="Manage Clients" Clicked="ClientsClicked"></Button>
-            <Button Text="Manage Projects" Clicked="ProjectsClicked"></Button>
+            <Button Text="Manage Clients and Projects" Clicked="ClientsClicked"></Button>
             <Button Text="Manage Employees" Clicked="EmployeesClicked"></Button>
             <Button Text="Enter Time" Clicked="TimeClicked"></Button>
         </VerticalStackLayout>
