--- a/PP.MAUI/Views/ClientView.xaml
+++ b/PP.MAUI/Views/ClientView.xaml
@@ -50,11 +50,13 @@
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
+                    <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
 
                 <Button Grid.Column="0" Text="Add" Clicked="AddClicked"></Button>
                 <Button Grid.Column="1" Text="Edit" Clicked="EditClicked"></Button>
                 <Button Grid.Column="2" Text="Delete" Clicked="DeleteClicked"></Button>
+                <Button Grid.Column="3" Text="Projects" Clicked="ProjectsClicked"></Button>
 
             </Grid>
             <Button Grid.Row="3" Text="Go Back" Clicked="GoBackClicked"></Button>
