--- a/PP.MAUI/Views/ProjectView.xaml
+++ b/PP.MAUI/Views/ProjectView.xaml
@@ -30,12 +30,16 @@
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
 
                 <Button Grid.Column="0" Text="Add" Clicked="AddClicked"></Button>
                 <Button Grid.Column="1" Text="Edit" Clicked="EditClicked"></Button>
                 <Button Grid.Column="2" Text="Delete" Clicked="DeleteClicked"></Button>
-
+                <Button Grid.Column="3" Text="Time" Clicked="TimeClicked"></Button>
+                <Button Grid.Column="4" Text="Bills" Clicked="BillsClicked"></Button>
+                
             </Grid>
             <Button Grid.Row="2" Text="Go Back" Clicked="GoBackClicked"></Button>
         </Grid>
