--- a/PP.MAUI/Views/EmployeeDetail.xaml
+++ b/PP.MAUI/Views/EmployeeDetail.xaml
@@ -8,7 +8,7 @@
             Spacing="25"
             Padding="30,0"
             VerticalOptions="Center">
-            <Label Text="Edit the Employee Below..."></Label>
+            <Label Text="Edit the Employee Below..." FontSize="Title"></Label>
 
             <Label Text="Name:"></Label>
             <Entry Text="{Binding Path=Model.Name}"></Entry>
