--- a/PP.MAUI/Views/ProjectView.xaml
+++ b/PP.MAUI/Views/ProjectView.xaml
@@ -38,7 +38,7 @@
                 <Button Grid.Column="1" Text="Edit" Clicked="EditClicked"></Button>
                 <Button Grid.Column="2" Text="Delete" Clicked="DeleteClicked"></Button>
                 <Button Grid.Column="3" Text="Time" Clicked="TimeClicked"></Button>
-                <Button Grid.Column="4" Text="Bills" Clicked="BillsClicked"></Button>
+                <Button Grid.Column="4" Text="Billing" Clicked="BillClicked"></Button>
                 
             </Grid>
             <Button Grid.Row="2" Text="Go Back" Clicked="GoBackClicked"></Button>
