--- a/PP.MAUI/Views/TimerDetail.xaml
+++ b/PP.MAUI/Views/TimerDetail.xaml
@@ -8,7 +8,7 @@
             Spacing="25"
             Padding="30,0"
             VerticalOptions="Center">
-            <Label Text="Edit the Time Below..."></Label>
+            <Label Text="Edit the Time Below..." FontSize="Title"></Label>
             
             <Label Text="Date:"></Label>
             <DatePicker Date="{Binding Path=Model.Date}"></DatePicker>
