--- a/PP.MAUI/Views/EditProject.xaml
+++ b/PP.MAUI/Views/EditProject.xaml
@@ -9,7 +9,7 @@
             Spacing="25"
             Padding="30,0"
             VerticalOptions="Center">
-            <Label Text="Edit the Project Below..."></Label>
+            <Label Text="Edit the Project Below..." FontSize="Title"></Label>
             <Label Text="Open Date:"></Label>
             <DatePicker Date="{Binding Path=Model.OpenDate}"></DatePicker>
 
