--- a/PP.MAUI/Views/ProjectView.xaml
+++ b/PP.MAUI/Views/ProjectView.xaml
@@ -37,8 +37,8 @@
                 <Button Grid.Column="0" Text="Add" Clicked="AddClicked"></Button>
                 <Button Grid.Column="1" Text="Edit" Clicked="EditClicked"></Button>
                 <Button Grid.Column="2" Text="Delete" Clicked="DeleteClicked"></Button>
-                <Button Grid.Column="3" Text="Time" Clicked="TimeClicked"></Button>
-                <Button Grid.Column="4" Text="Billing" Clicked="BillClicked"></Button>
+                <Button Grid.Column="3" Text="Add Time Entry" Clicked="TimeClicked"></Button>
+                <Button Grid.Column="4" Text="Add/Edit Bill" Clicked="BillClicked"></Button>
                 
             </Grid>
             <Button Grid.Row="2" Text="Go Back" Clicked="GoBackClicked"></Button>
